<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.heroessoftware.geotag.Activities.ModificaPercorsoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="64dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/content_padding"
        android:paddingRight="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percorso_nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percorso_categoria" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_autista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_autista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percorso_autista" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mezzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_mezzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percorso_mezzo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percorso_note" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
