<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.heroessoftware.geotag.Activities.ModificaPosizioneActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_etichetta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:paddingRight="@dimen/content_padding"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/input_etichetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/posizione_etichetta"
                    android:textAppearance="@style/big"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_padding"
        android:paddingLeft="@dimen/content_padding"
        android:paddingRight="@dimen/content_padding"
        android:paddingTop="142dp"
        android:showDividers="middle|end">

        <EditText
            android:id="@+id/input_indirizzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_etichetta_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/posizione_indirizzo"
            android:paddingBottom="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding"
            android:textAppearance="@style/medium" />

        <EditText
            android:id="@+id/input_utente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/posizione_utente"
            android:paddingBottom="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding"
            android:textAppearance="@style/medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/hint_orario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clock_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="Imposta un orario"
                android:textAppearance="@style/medium"
                android:textColor="?android:attr/textColorHint" />

            <Switch
                android:id="@+id/switch_orario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/input_orario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/hint_orario"
                android:layout_below="@id/hint_orario"
                android:hint="Orario"
                android:paddingLeft="48dp"
                android:paddingTop="12dp"
                android:textAppearance="@style/medium"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/numeroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_sort_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:paddingBottom="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding"
            android:textAppearance="@style/medium" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
